--- a/assets/style.css
+++ b/assets/style.css
@@ -199,7 +199,7 @@ img.placeholder-two {
 #portfolio a:hover {
     
 }
-
+/* USE BACKGROUND IMAGE INSTEAD OF OF FORMATTING IMAGES */
 #portfolio .github-text {
     position: absolute;
     text-align: center;
