--- a/assets/style.css
+++ b/assets/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 h2 {
@@ -65,7 +65,6 @@ nav {
     padding-bottom: 1rem;
     padding-left: 3rem;
     padding-right: 3rem;
-    border-bottom: .2rem solid #d179cd;
     z-index: 1;
     
 }
@@ -86,6 +85,7 @@ li {
 }
 
 a {
+    color:#5b5757;
     font-size: 1.6rem;
     text-decoration: none;
     transition: .3s ease;
@@ -106,153 +106,160 @@ main {
 }
 
 /* Page One, Home Section */
-.page-one {
-    display: grid;
+#page-one {
     background-color: var(--light);
     margin-top: 1rem;
     border-radius: .5rem;
-    padding: 8rem;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
 }
 
+
 img.hello-pic {
-    width: 100%;
-    max-width: 61rem;
+    width: 50%;
+    max-width: 51rem;
     height: auto;
-    float: right;
-    margin-left: 2.5rem;
+    margin-right: 1rem;
+    margin-left: 10%;
     outline: .2rem solid #d179cd;
 }
 
 #home {
-    float: left;
-    margin-right: 2.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3rem
 }
 
-#home h2.greeting {
-    margin-top: 12rem;
-
+.text-wrapper {
+    width: 50%;
+    margin-left: 1rem;
 }
+
 
 
 /* Page Two, About Section */
-.page-two {
+#page-two {
     background-color: var(--light);
     margin-top: 2rem;
     border-radius: .5rem;
     padding: 2rem;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
 }
 
+#page-two h2 {
+    text-align: center;
+}
 
 #about {
-    
+    padding: 3rem;
 }
 
-#about h2.bio-elements {
-    
-}
 
 
 /* Page Three, Portfolio Section */
-.page-three {
+#page-three {
     background-color: var(--light);
     margin-top: 2rem;
     border-radius: .5rem;
     padding: 2rem;
-    
+    padding-top: 8rem;
+    padding-bottom: 8rem;
 }
 
-img.github {
-    width: 100%;
-    max-width: 100rem;
-    height: auto;
-    outline: .2rem solid #d179cd;
-}
-
-img.placeholder-one {
-    width: 100%;
-    max-width: 50rem;
-    max-height: 28.1rem;
-    height: auto;
-    outline: .2rem solid #d179cd;
-    object-fit: cover;
-}
-
-img.placeholder-two {
-    width: 100%;
-    max-width: 50rem;
-    height: auto;
-    outline: .2rem solid #d179cd;
-    transform: scaleX(-1);
+#page-three h2 {
+    text-align: center;
 }
 
 #portfolio {
-    position: relative;
-    width: 100%;
-    display: block;
-    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 5vw);
+    grid-gap: 1.5rem;
+    padding: 3rem;
 }
 
 #portfolio a {
-    
+    -webkit-filter: brightness(60%);
+    transition: all 1s ease;
 }
 
 #portfolio a:hover {
-    
-}
-/* USE BACKGROUND IMAGE INSTEAD OF OF FORMATTING IMAGES */
-#portfolio .github-text {
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    left: 7.4%;
-    width: 20%;
-    line-height: 2;
-    background-color: rgb(255, 255, 255, .8);
-    border: .2rem solid #d179cd;
+    -webkit-filter:brightness(100%);
 }
 
-#portfolio .placeholder-text-one {
-    position: absolute;
-    text-align: center;
-    top: 87%;
-    left: 7.4%;
-    width: 20%;
+#portfolio h3 {
+    color: #0f065e;
+    background-color: rgba(255, 255, 255, 0.8);
     line-height: 2;
-    background-color: rgb(255, 255, 255, .8);
-    border: .2rem solid #d179cd;
+    text-align: center;
+    border-top: .2rem solid #d179cd;
+    border-right: .2rem solid #d179cd;
+    border-bottom: .2rem solid #d179cd;
 }
 
-#portfolio .placeholder-text-two {
-    position: absolute;
-    text-align: center;
-    top: 87%;
-    left: 50%;
-    width: 20%;
-    line-height: 2;
-    background-color: rgb(255, 255, 255, .8);
-    border: .2rem solid #d179cd;
+.gallery-link-one {
+    width: 100%;
+    height: 100%;
+    outline: .2rem solid #d179cd;
+    grid-column: 1 / 6;
+    grid-row: 1 / 4;
+    background-image: url(../assets/images/coding.jpg);
 }
 
-#portfolio h2.portfolio-elements {
-    text-align: left;
+.gallery-link-two {
+    width: 100%;
+    height: 100%;
+    outline: .2rem solid #d179cd;
+    grid-column: 1 / 3;
+    grid-row: 4 / 6;
+    background-image: url(../assets/images/placeholder1.jpg);
+}
+
+.gallery-link-three {
+    width: 100%;
+    height: 100%;
+    outline: .2rem solid #d179cd;
+    grid-column: 3 / 6;
+    grid-row: 4 / 6;
+    background-image: url(../assets/images/placeholder3.jpg);
+}
+
+.gallery-link-one h3 {
+    width: 20%;
+    margin-top: 15%;
+}
+
+.gallery-link-two h3 {
+    width: 50%;
+    margin-top: 20%;
+}
+
+.gallery-link-three h3 {
+   width: 30%;
+   margin-top: 13%;
 }
 
 
 /* Page Four, Contact Section */
-.page-four {
+#page-four {
     background-color: var(--light);
     margin-top: 2rem;
     border-radius: .5rem;
     padding: 2rem;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+}
+
+#page-four h2 {
+    text-align: center;
 }
 
 #contact {
-
+    padding: 3rem;
 }
 
-#contact h2.contact-me {
-
-}
 
 /* Footer Section */
 footer {
