--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,10 @@
     --light: #fff;
 }
 
+* {
+    font-family: 'Cutive Mono','Courier New', Courier, monospace;
+}
+
 /* Font size set to 10px. 1rem will equal 10px. */
 html {
     font-size: 62.5%;
@@ -107,11 +111,12 @@ main {
 
 /* Page One, Home Section */
 #page-one {
-    background-color: var(--light);
+    background-color: rgba(255, 255, 255, 0.5);
     margin-top: 1rem;
     border-radius: .5rem;
     padding-top: 8rem;
     padding-bottom: 8rem;
+    border: .3rem solid #fff;
 }
 
 
@@ -121,7 +126,8 @@ img.hello-pic {
     height: auto;
     margin-right: 1rem;
     margin-left: 10%;
-    outline: .2rem solid #d179cd;
+    outline: .3rem solid #fff;
+    border-radius: .5rem;
 }
 
 #home {
@@ -140,12 +146,13 @@ img.hello-pic {
 
 /* Page Two, About Section */
 #page-two {
-    background-color: var(--light);
+    background-color: rgba(255, 255, 255, 0.5);
     margin-top: 2rem;
     border-radius: .5rem;
     padding: 2rem;
     padding-top: 8rem;
     padding-bottom: 8rem;
+    border: .3rem solid #fff;
 }
 
 #page-two h2 {
@@ -160,12 +167,13 @@ img.hello-pic {
 
 /* Page Three, Portfolio Section */
 #page-three {
-    background-color: var(--light);
+    background-color: rgba(255, 255, 255, 0.5);
     margin-top: 2rem;
     border-radius: .5rem;
     padding: 2rem;
     padding-top: 8rem;
     padding-bottom: 8rem;
+    border: .3rem solid #fff;
 }
 
 #page-three h2 {
@@ -181,12 +189,12 @@ img.hello-pic {
 }
 
 #portfolio a {
-    -webkit-filter: brightness(60%);
+    -webkit-filter: brightness(100%);
     transition: all 1s ease;
 }
 
 #portfolio a:hover {
-    -webkit-filter:brightness(100%);
+    -webkit-filter:brightness(50%);
 }
 
 #portfolio h3 {
@@ -194,15 +202,15 @@ img.hello-pic {
     background-color: rgba(255, 255, 255, 0.8);
     line-height: 2;
     text-align: center;
-    border-top: .2rem solid #d179cd;
-    border-right: .2rem solid #d179cd;
-    border-bottom: .2rem solid #d179cd;
+    border-top: .3rem solid #fff;
+    border-right: .3rem solid #fff;
+    border-bottom: .3rem solid #fff;
 }
 
 .gallery-link-one {
     width: 100%;
     height: 100%;
-    outline: .2rem solid #d179cd;
+    outline: .3rem solid #fff;
     grid-column: 1 / 6;
     grid-row: 1 / 4;
     background-image: url(../assets/images/coding.jpg);
@@ -211,7 +219,7 @@ img.hello-pic {
 .gallery-link-two {
     width: 100%;
     height: 100%;
-    outline: .2rem solid #d179cd;
+    outline: .3rem solid #fff;
     grid-column: 1 / 3;
     grid-row: 4 / 6;
     background-image: url(../assets/images/placeholder1.jpg);
@@ -220,7 +228,7 @@ img.hello-pic {
 .gallery-link-three {
     width: 100%;
     height: 100%;
-    outline: .2rem solid #d179cd;
+    outline: .3rem solid #fff;
     grid-column: 3 / 6;
     grid-row: 4 / 6;
     background-image: url(../assets/images/placeholder3.jpg);
@@ -244,12 +252,13 @@ img.hello-pic {
 
 /* Page Four, Contact Section */
 #page-four {
-    background-color: var(--light);
+    background-color: rgba(255, 255, 255, 0.5);
     margin-top: 2rem;
     border-radius: .5rem;
     padding: 2rem;
     padding-top: 8rem;
     padding-bottom: 8rem;
+    border: .3rem solid #fff;
 }
 
 #page-four h2 {
@@ -268,6 +277,8 @@ footer {
     bottom: 0;
     border-radius: .5rem .5rem 0 0;
     padding: 2rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: .3rem solid #fff;
 }
 
 /* Media Queries Section */
