--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,7 @@ body {
     background-image: url(../assets/images/background.jpg);
     background-size: cover;
     background-attachment: fixed;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-color: blueviolet;
     width: 80%;
     height: fit-content;
