--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,17 @@
-:root {
-    --light: #fff;
-}
+/* ========================== 
+    Global and Body Section 
+   ========================== 
+*/
 
+/* Font family set for entire page 
+   ------------------------------- */
 * {
     font-family: 'Cutive Mono','Courier New', Courier, monospace;
 }
 
-/* Font size set to 10px. 1rem will equal 10px. */
+/* Font size set to 10px. 1rem will equal 10px. 
+        Flex allows body to be centered on page 
+   -------------------------------------------- */
 html {
     font-size: 62.5%;
     display: flex;
@@ -15,12 +20,16 @@ html {
     box-sizing: border-box;
 }
 
+/* Allowed some positioning to function better 
+  ------------------------------------------- */
 .wrapper {
     position: relative;
     height: 100%;
     min-height: 100%;
 }
 
+/* Allows my background to remain fixed while all other containers scroll on top
+  ----------------------------------------------------------------------------- */
 body {
     background-image: url(../assets/images/background.jpg);
     background-size: cover;
@@ -31,6 +40,8 @@ body {
     height: fit-content;
 }
 
+/* Header font sizes 
+   ----------------- */
 h1 {
     font-size: 3rem;
 }
@@ -43,16 +54,26 @@ h3 {
     font-size: 2rem;
 }
 
-/* Properties applied to the Header and Footer */
+
+/* =====================================
+   Navigation and Footer Shared Elements
+   ===================================== 
+*/
+
 nav,
 footer {
-    background-color: var(--light);
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/* Header and Navigation Bar Section*/
+
+/* ======================
+   Navigation Bar Section 
+   ====================== 
+*/
+
 nav {
     position: sticky;
     display: flex;
@@ -68,7 +89,10 @@ nav {
     
 }
 
-/* This allows me to change the color based on hover and what page we are on */
+/* Hovering over navigation lowers the opacity. 
+    Hovering over links raises the opacity back up. 
+        Clicking makes text disappear momentarily.
+   ----------------------------------------------- */
 nav:hover li a {
     opacity: 0.5; 
 }
@@ -83,13 +107,16 @@ nav li a:active {
   
 }
 
-
+/* Displays links on one line instead of a column. Removes bullets. 
+   ---------------------------------------------------------------- */
 li {
     display: inline-block;
     margin: 1rem;
     text-decoration: none;
 }
 
+/* Removes underline from link and changes the font color
+   ------------------------------------------------------ */
 a {
     color:#5b5757;
     font-size: 1.6rem;
@@ -97,18 +124,27 @@ a {
     transition: .3s ease;
 }
 
+/* Regular font should equal around 16px 
+   ------------------------------------- */
 p {
     font-size: 1.6rem;
 }
 
+/* Image resizing
+   -------------- */
 img.logo {
     height: 5rem;
     width: 5rem;
 }
 
 
+/* ====================== 
+   Page One, Home Section 
+   ====================== 
+*/
 
-/* Page One, Home Section */
+/* Rounded edges and positioning for content
+   ----------------------------------------- */
 #page-one {
     background-color: rgba(255, 255, 255, 0.5);
     margin-top: -1rem;
@@ -118,6 +154,8 @@ img.logo {
     border: .3rem solid #fff;
 }
 
+/* Allows picture and name to sit next to each other
+   ------------------------------------------------- */
 #home {
     display: flex;
     justify-content: space-between;
@@ -125,6 +163,8 @@ img.logo {
     padding: 3rem
 }
 
+/* Image resizing, positioning, and outline
+   ---------------------------------------- */
 img.hello-pic {
     width: 50%;
     max-width: 51rem;
@@ -135,13 +175,21 @@ img.hello-pic {
     border-radius: 5rem;
 }
 
-
+/* Positioning for name
+   -------------------- */
 .text-wrapper {
     width: 50%;
     margin-left: 1rem;
 }
 
-/* Page Two, About Section */
+
+/* ======================= 
+   Page Two, About Section 
+   ======================= 
+*/
+
+/* Rounded edges and positioning for content
+   ----------------------------------------- */
 #page-two {
     background-color: rgba(255, 255, 255, 0.5);
     margin-top: 2rem;
@@ -152,31 +200,32 @@ img.hello-pic {
     border: .3rem solid #fff;
 }
 
+/* Aligning header to the center 
+   ----------------------------- */
 #page-two h2 {
     text-align: center;
 }
 
+/* Positioning for text */
 #about {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
     margin-left: -1.2rem;
     margin-right: -1.2rem;
     padding: 3rem;
 }
-
-
+ 
 .info {
     padding: 3rem;
-    padding-top: 3rem;
     padding-bottom: 1rem;
 }
 
 
+/* ============================= 
+   Page Three, Portfolio Section 
+   ============================= 
+*/
 
-
-/* Page Three, Portfolio Section */
+/* Rounded edges and positioning for content
+   ----------------------------------------- */
 #page-three {
     background-color: rgba(255, 255, 255, 0.5);
     margin-top: 2rem;
@@ -187,10 +236,14 @@ img.hello-pic {
     border: .3rem solid #fff;
 }
 
+/* Aligning header to the center 
+   ----------------------------- */
 #page-three h2 {
     text-align: center;
 }
 
+/* Created a grid to set a larger image on top with two smaller images below
+   ------------------------------------------------------------------------- */
 #portfolio {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -199,17 +252,17 @@ img.hello-pic {
     padding: 3rem;
 }
 
-#portfolio a {
-    -webkit-filter: brightness(100%);
-    filter: brightness(100%);
-    transition: all 1s ease;
-}
-
+/* Created a hover affect that dims the picture. 
+    Set the transition to ease in.
+   --------------------------------------------- */
 #portfolio a:hover {
     -webkit-filter:brightness(50%);
     filter: brightness(50%);
+    transition: all 1s ease;
 }
 
+/* Positioning and styling for image labels
+   ---------------------------------------- */
 #portfolio h3 {
     color: #0f065e;
     background-color: rgba(255, 255, 255, 0.8);
@@ -220,6 +273,8 @@ img.hello-pic {
     border-bottom: .3rem solid #fff;
 }
 
+/* Grid positioning for images
+   --------------------------- */
 .gallery-link-one {
     width: 100%;
     height: 100%;
@@ -247,6 +302,8 @@ img.hello-pic {
     background-image: url(../assets/images/placeholder3.jpg);
 }
 
+/* Where the label is positioned on each image
+   ------------------------------------------- */
 .gallery-link-one h3 {
     width: 20%;
     margin-top: 15%;
@@ -263,7 +320,13 @@ img.hello-pic {
 }
 
 
-/* Page Four, Contact Section */
+/* ========================== 
+   Page Four, Contact Section 
+   ========================== 
+*/
+
+/* Rounded edges and positioning for content
+   ----------------------------------------- */
 #page-four {
     background-color: rgba(255, 255, 255, 0.5);
     margin-top: 2rem;
@@ -274,10 +337,14 @@ img.hello-pic {
     border: .3rem solid #fff;
 }
 
+/* Aligning header to the center 
+   ----------------------------- */
 #page-four h2 {
     text-align: center;
 }
 
+/* Allows form to sit in the center
+   -------------------------------- */
 #contact {
     display: flex;
     justify-content: center;
@@ -285,6 +352,8 @@ img.hello-pic {
     padding: 3rem;
 }
 
+/* Form sizing and text, label, and input positioning
+   -------------------------------------------------- */
 form {
     margin: 0 auto;
     width: 50rem;
@@ -318,6 +387,8 @@ button {
     color: #FDF8F5;
 }
 
+/* Additional contact information positioning
+   ------------------------------------------ */
 .label-text {
     text-align: right;
 }
@@ -336,7 +407,8 @@ button {
     padding: 3rem;
 }
 
-
+/* Removed bullets from list
+   ------------------------- */
 .contact-directly ul li {
     display: flex;
     justify-content: space-evenly;
@@ -345,7 +417,13 @@ button {
 }
 
 
-/* Footer Section */
+/* ==============
+   Footer Section 
+   ============== 
+*/
+
+/* Rounded edges and positioning for content
+   ----------------------------------------- */
 footer {
     font-size: 2rem;
     margin-top: 2rem;
@@ -356,10 +434,15 @@ footer {
     border: .3rem solid #fff;
 }
 
-/* Media Queries Section */
+
+/* =====================
+   Media Queries Section 
+   ===================== 
+*/
+
 @media screen and (max-width: 540px) {
     nav,
-    ul,
+    ul, 
     li {
         display: flex;
         flex-direction:column;
