--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 /* Font family set for entire page 
    ------------------------------- */
 * {
-    font-family: 'Cutive Mono','Courier New', Courier, monospace;
+    font-family: 'Cutive Mono', 'Courier New', Courier, monospace;
 }
 
 /* Font size set to 10px. 1rem will equal 10px. 
@@ -86,7 +86,7 @@ nav {
     padding-left: 3rem;
     padding-right: 3rem;
     z-index: 1;
-    
+
 }
 
 /* Hovering over navigation lowers the opacity. 
@@ -94,17 +94,17 @@ nav {
         Clicking makes text disappear momentarily.
    ----------------------------------------------- */
 nav:hover li a {
-    opacity: 0.5; 
+    opacity: 0.5;
 }
 
 nav:hover li a:hover {
-      opacity: 1; 
-    
+    opacity: 1;
+
 }
 
 nav li a:active {
     color: #fff;
-  
+
 }
 
 /* Displays links on one line instead of a column. Removes bullets. 
@@ -118,7 +118,7 @@ li {
 /* Removes underline from link and changes the font color
    ------------------------------------------------------ */
 a {
-    color:#5b5757;
+    color: #5b5757;
     font-size: 1.6rem;
     text-decoration: none;
     transition: .3s ease;
@@ -139,7 +139,7 @@ img.logo {
 
 
 /* ====================== 
-   Page One, Home Section 
+    Page One, Home Section 
    ====================== 
 */
 
@@ -212,7 +212,7 @@ img.hello-pic {
     margin-right: -1.2rem;
     padding: 3rem;
 }
- 
+
 .info {
     padding: 3rem;
     padding-bottom: 1rem;
@@ -247,7 +247,7 @@ img.hello-pic {
 #portfolio {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(5, 5vw);
+    grid-template-rows: repeat(8, 8vw);
     grid-gap: 1.5rem;
     padding: 3rem;
 }
@@ -256,7 +256,7 @@ img.hello-pic {
     Set the transition to ease in.
    --------------------------------------------- */
 #portfolio a:hover {
-    -webkit-filter:brightness(50%);
+    -webkit-filter: brightness(50%);
     filter: brightness(50%);
     transition: all 1s ease;
 }
@@ -264,8 +264,8 @@ img.hello-pic {
 /* Positioning and styling for image labels
    ---------------------------------------- */
 #portfolio h3 {
-    color: #0f065e;
-    background-color: rgba(255, 255, 255, 0.8);
+    color: #ffffff;
+    background-color: rgba(42, 131, 146, 0.8);
     line-height: 2;
     text-align: center;
     border-top: .3rem solid #fff;
@@ -281,7 +281,7 @@ img.hello-pic {
     outline: .3rem solid #fff;
     grid-column: 2 / 6;
     grid-row: 1 / 4;
-    background-image: url(../assets/images/weatherapp.gif);
+    background-image: url(../assets/images/TPR-port.png);
     background-size: cover;
 }
 
@@ -293,6 +293,7 @@ img.hello-pic {
     grid-row: 4 / 6;
     background-image: url(../assets/images/Randamu1.png);
     background-size: cover;
+    background-position: center;
 }
 
 .gallery-link-three {
@@ -301,14 +302,25 @@ img.hello-pic {
     outline: .3rem solid #fff;
     grid-column: 4 / 6;
     grid-row: 4 / 6;
-    background-image: url(../assets/images/JavaScriptQuiz.png);
+    background-image: url(../assets/images/CaffeineandCoding.png);
+    background-size: cover;
+    background-position: center;
+}
+
+.gallery-link-four {
+    width: 100%;
+    height: 100%;
+    outline: .3rem solid #fff;
+    grid-column: 2 / 6;
+    grid-row: 6 / 8;
+    background-image: url(../assets/images/weatherapp.gif);
     background-size: cover;
 }
 
 /* Where the label is positioned on each image
    ------------------------------------------- */
 .gallery-link-one h3 {
-    width: 20%;
+    width: 30%;
     margin-top: 10%;
 }
 
@@ -318,9 +330,15 @@ img.hello-pic {
 }
 
 .gallery-link-three h3 {
-   width: 30%;
-   margin-top: 20%;
+    width: 30%;
+    margin-top: 20%;
 }
+
+.gallery-link-four h3 {
+    width: 30%;
+    margin-top: 10%;
+}
+
 
 
 /* ========================== 
@@ -364,25 +382,25 @@ form {
     border: .3rem solid #fff;
     border-radius: 2rem;
 }
-  
+
 label {
     display: inline-block;
     width: 10rem;
     font-size: 1.6rem;
 }
-    
-input, 
+
+input,
 textarea {
     box-sizing: border-box;
     width: 30rem;
     border: 1px solid #935d9b;
 }
-  
+
 textarea {
     vertical-align: top;
     height: 6rem;
 }
-    
+
 button {
     height: 4rem;
     width: 12rem;
@@ -441,13 +459,15 @@ footer {
 */
 
 @media screen and (max-width: 540px) {
+
     nav,
-    ul, 
+    ul,
     li {
         display: flex;
-        flex-direction:column;
+        flex-direction: column;
         text-align: center;
     }
+
     #page-one,
     #page-two,
     #page-three,
@@ -469,6 +489,7 @@ footer {
     .logo {
         display: none;
     }
+
     #portfolio h3 {
         line-height: 1;
     }
@@ -480,20 +501,20 @@ footer {
     form {
         width: 30rem;
     }
-    
+
     input,
     textarea {
         width: 28rem;
     }
-    
+
     .label-text {
         text-align: left;
     }
 
 }
-    
+
 @media screen and (max-width: 426px) {
-    
+
     #page-one,
     #page-two,
     #page-three,
@@ -502,16 +523,18 @@ footer {
     #about,
     #portfolio,
     #content {
-      padding: .5rem;
-      padding-top: 2rem;
-      
+        padding: .5rem;
+        padding-top: 2rem;
+
     }
+
     form,
     .contact-directly p {
         display: none;
     }
-     .contact-directly ul {
+
+    .contact-directly ul {
         padding: 0;
         margin-top: -2rem;
-     }
+    }
 }
